--- a/Threading/Threading/ThreadingTuts.csproj
+++ b/Threading/Threading/ThreadingTuts.csproj
@@ -43,10 +43,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoResetEventSignal.cs" />
+    <Compile Include="ExceptionHandling.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TaskCancellation.cs" />
     <Compile Include="ThreadSafety.cs" />
     <Compile Include="TwoWaySignaling.cs" />
+    <Compile Include="WaitingForTask.cs" />
+    <Compile Include="WaitingForTimeToPass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
