ConcurrentCollections Hacker Rank solutions

--- a/Threading/Threading/ThreadingTuts.csproj
+++ b/Threading/Threading/ThreadingTuts.csproj
@@ -43,7 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoResetEventSignal.cs" />
+    <Compile Include="ConcurrentCollections.cs" />
     <Compile Include="ExceptionHandling.cs" />
+    <Compile Include="HackersCodeProblems.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TaskCancellation.cs" />
